<resources>
    <string name="app_name">DrugReminder</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="dosage">Dosage</string>
    <string name="time">Time</string>
    <string name="select_time">Select Time</string>
    <string name="notes">Notes</string>
    <string name="save_medicine">Save Medicine</string>
    <string name="add_dose">Add Dose</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="how_many_days">How Many Days</string>
    <string name="start_date">start date</string>
    <string name="end_date">end date</string>
    <string name="select_days">select days</string>
    <string name="sat">SAT</string>
    <string name="fri">FRI</string>
    <string name="thu">THU</string>
    <string name="wed">WED</string>
    <string name="tue">TUE</string>
    <string name="mon">MON</string>
    <string name="sun">SUN</string>
    <string name="choose_time">Choose Time</string>
    <string name="no_history">No history</string>
    <string name="dosage_history">Dosage History</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="specialty">Specialty</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="save_appointment">Save Appointment</string>
    <string name="update_appointment">Update Appointment</string>
    <string name="fill_required_fields">Please fill all required fields</string>
    <string name="select_date">Please select a date</string>
    <string name="select_appointment_time">Please select a time</string>
    <string name="appointment_saved">Appointment Saved</string>
    <string name="nav_medicines">Medicines</string>
    <string name="nav_lab_results">Lab Results</string>
    <string name="nav_appointments">Appointments</string>
    <string name="fab_add_medicine">Add Medicine</string>
    <string name="fab_add_appointment">Add Appointment</string>
    <string name="fab_add_lab_result">Add Lab Result</string>
    <string name="save">Save</string>
    <string name="notes_optional">Notes (optional)</string>
    <string name="datee">Date</string>
    <string name="unit">Unit</string>
    <string name="value">Value</string>
    <string name="analysis_name">Analysis Name</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="fab_add">Add</string>
    <string name="attach_pdf">Attach PDF File</string>
    <string name="pdf_attached">PDF attached: %s</string>
    <string name="choose_option">Choose an option</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="add_lab_result">Add Lab Result</string>
    <string name="add_appointment_option">Add Appointment</string>
</resources>